[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "i3save"
version = "0.1.0"
description = "A CLI utility for saving and restoring i3 workspace-to-monitor mappings"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: Window Managers",
]
keywords = ["i3", "i3wm", "workspace", "monitor", "save", "restore"]

[project.scripts]
i3save = "i3save.cli:main"

[project.urls]
Homepage = "https://github.com/brandonhenry/i3save"
Repository = "https://github.com/brandonhenry/i3save"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
